[gd_scene load_steps=6 format=2]

[ext_resource path="res://botaobase.png" type="Texture" id=1]
[ext_resource path="res://Botao_Letra.gd" type="Script" id=2]
[ext_resource path="res://assets/Sons/tul.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Sons/pui.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.6828, 92.6915 )

[node name="Botao_Letra" type="Area2D"]
z_index = 1
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.28, 0.28 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.7

[node name="som2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 0.7
[connection signal="input_event" from="." to="." method="_on_Botao_Letra_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
